fix: Heading text clipping

--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -118,6 +118,10 @@
     .gpt3__header-content {
         margin: 0 0 3rem;
     }
+
+    .gpt3__header-content h1 {
+        padding-bottom: 3px;
+    }
 }
 
 @media screen and (max-width: 650px) {
@@ -143,6 +147,10 @@
     .gpt3__header-content__input button {
         font-size: 16px;
         line-height: 24px;
+    }
+
+    .gpt3__header-content h1 {
+        padding-bottom: 0;
     }
 }
 
